// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[Mode: combined]] Overriding Tests:  Basic 1`] = `
"/* Mirror properties, do nothing */
.test1 {
    padding-left: 10px;
    padding-right: 10px;
}

/* Mirror properties, do nothing */
.test2 {
    margin-left: 5px;
    margin-right: 5px;
    margin-left: 10px;
    margin-right: 10px;
    margin-left: 0;
    margin-right: 0;
}

/* Flipped-declarations overriden by non-flipped declarations, do nothing */
.test3 {
    text-align: left;
    text-align: right;
    text-align: center;
}

/* Overriden mirror properties */
.test4 {
    left: 0;
    right: 10px;
}

[dir="ltr"] .test4 {
    left: 10px;
    right: 0;
}

[dir="rtl"] .test4 {
    right: 10px;
    left: 0;
}

/* Overriden with non-flippable declarations should move only the last one */
.test5 {
    padding: 0 2px 0 4px;
    padding: 0 4px 0 8px;
}

[dir="ltr"] .test5 {
    padding: 0 8px 0 16px;
}

[dir="rtl"] .test5 {
    padding: 0 16px 0 8px;
}

/* Overriden with flippable declarations should move all of them */
[dir="ltr"] .test6 {
    margin-right: 1px;
    margin-right: 2px;
    margin-right: 3px;
}

[dir="rtl"] .test6 {
    margin-left: 1px;
    margin-left: 2px;
    margin-left: 3px;
}

/* Overriden with flippable declarations but a counterpart flipped declaration should move only the last one */
.test7 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir="ltr"] .test7 {
    margin-left: 4px;
    margin-right: 3px;
}

[dir="rtl"] .test7 {
    margin-right: 4px;
    margin-left: 3px;
}

.test8 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir="ltr"] .test8 {
    margin-left: 4px;
    margin-right: 3px;
}

[dir="rtl"] .test8 {
    margin-right: 4px;
    margin-left: 3px;
}

/* Overriden with flippable declarations but a counterpart flipped declaration should move only the last one even if there is a mirror */
.test9 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir="ltr"] .test9 {
    margin-left: 1px;
    margin-right: 3px;
}

[dir="rtl"] .test9 {
    margin-right: 1px;
    margin-left: 3px;
}

/* Overriden should behave correctly with safeBothPrefix */
.test10 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}"
`;

exports[`[[Mode: combined]] Overriding Tests:  With safeBothPrefix 1`] = `
"/* Mirror properties, do nothing */
[dir] .test1 {
    padding-left: 10px;
    padding-right: 10px;
}

/* Mirror properties, do nothing */
.test2 {
    margin-left: 5px;
    margin-right: 5px;
    margin-left: 10px;
    margin-right: 10px;
}

[dir] .test2 {
    margin-left: 0;
    margin-right: 0;
}

/* Flipped-declarations overriden by non-flipped declarations, do nothing */
.test3 {
    text-align: left;
    text-align: right;
}

[dir] .test3 {
    text-align: center;
}

/* Overriden mirror properties */
.test4 {
    left: 0;
    right: 10px;
}

[dir="ltr"] .test4 {
    left: 10px;
    right: 0;
}

[dir="rtl"] .test4 {
    right: 10px;
    left: 0;
}

/* Overriden with non-flippable declarations should move only the last one */
.test5 {
    padding: 0 2px 0 4px;
    padding: 0 4px 0 8px;
}

[dir="ltr"] .test5 {
    padding: 0 8px 0 16px;
}

[dir="rtl"] .test5 {
    padding: 0 16px 0 8px;
}

/* Overriden with flippable declarations should move all of them */
[dir="ltr"] .test6 {
    margin-right: 1px;
    margin-right: 2px;
    margin-right: 3px;
}

[dir="rtl"] .test6 {
    margin-left: 1px;
    margin-left: 2px;
    margin-left: 3px;
}

/* Overriden with flippable declarations but a counterpart flipped declaration should move only the last one */
.test7 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir="ltr"] .test7 {
    margin-left: 4px;
    margin-right: 3px;
}

[dir="rtl"] .test7 {
    margin-right: 4px;
    margin-left: 3px;
}

.test8 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir="ltr"] .test8 {
    margin-left: 4px;
    margin-right: 3px;
}

[dir="rtl"] .test8 {
    margin-right: 4px;
    margin-left: 3px;
}

/* Overriden with flippable declarations but a counterpart flipped declaration should move only the last one even if there is a mirror */
.test9 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir="ltr"] .test9 {
    margin-left: 1px;
    margin-right: 3px;
}

[dir="rtl"] .test9 {
    margin-right: 1px;
    margin-left: 3px;
}

/* Overriden should behave correctly with safeBothPrefix */
.test10 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}

[dir] .test10 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}"
`;

exports[`[[Mode: diff]] Overriding Tests:  Basic 1`] = `
".test4 {
    right: 10px;
    left: 0;
}

.test5 {
    padding: 0 16px 0 8px;
}

.test6 {
    margin-right: 0;
    margin-left: 1px;
    margin-left: 2px;
    margin-left: 3px;
}

.test7 {
    margin-right: 4px;
    margin-left: 3px;
}

.test8 {
    margin-right: 4px;
    margin-left: 3px;
}

.test9 {
    margin-right: 1px;
    margin-left: 3px;
}"
`;

exports[`[[Mode: diff]] Overriding Tests:  With safeBothPrefix 1`] = `
".test1 {
    padding-left: 10px;
    padding-right: 10px;
}

.test2 {
    margin-left: 0;
    margin-right: 0;
}

.test3 {
    text-align: center;
}

.test4 {
    right: 10px;
    left: 0;
}

.test5 {
    padding: 0 16px 0 8px;
}

.test6 {
    margin-right: 0;
    margin-left: 1px;
    margin-left: 2px;
    margin-left: 3px;
}

.test7 {
    margin-right: 4px;
    margin-left: 3px;
}

.test8 {
    margin-right: 4px;
    margin-left: 3px;
}

.test9 {
    margin-right: 1px;
    margin-left: 3px;
}

.test10 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}"
`;

exports[`[[Mode: override]] Overriding Tests:  Basic 1`] = `
"/* Mirror properties, do nothing */
.test1 {
    padding-left: 10px;
    padding-right: 10px;
}

/* Mirror properties, do nothing */
.test2 {
    margin-left: 5px;
    margin-right: 5px;
    margin-left: 10px;
    margin-right: 10px;
    margin-left: 0;
    margin-right: 0;
}

/* Flipped-declarations overriden by non-flipped declarations, do nothing */
.test3 {
    text-align: left;
    text-align: right;
    text-align: center;
}

/* Overriden mirror properties */
.test4 {
    left: 0;
    left: 10px;
    right: 10px;
    right: 0;
}

[dir="rtl"] .test4 {
    right: 10px;
    left: 0;
}

/* Overriden with non-flippable declarations should move only the last one */
.test5 {
    padding: 0 2px 0 4px;
    padding: 0 4px 0 8px;
    padding: 0 8px 0 16px;
}

[dir="rtl"] .test5 {
    padding: 0 16px 0 8px;
}

/* Overriden with flippable declarations should move all of them */
.test6 {
    margin-right: 1px;
    margin-right: 2px;
    margin-right: 3px;
}

[dir="rtl"] .test6 {
    margin-right: 0;
    margin-left: 1px;
    margin-left: 2px;
    margin-left: 3px;
}

/* Overriden with flippable declarations but a counterpart flipped declaration should move only the last one */
.test7 {
    margin-right: 1px;
    margin-right: 2px;
    margin-left: 4px;
    margin-right: 3px;
}

[dir="rtl"] .test7 {
    margin-right: 4px;
    margin-left: 3px;
}

.test8 {
    margin-left: 4px;
    margin-right: 1px;
    margin-right: 2px;
    margin-right: 3px;
}

[dir="rtl"] .test8 {
    margin-right: 4px;
    margin-left: 3px;
}

/* Overriden with flippable declarations but a counterpart flipped declaration should move only the last one even if there is a mirror */
.test9 {
    margin-left: 1px;
    margin-right: 1px;
    margin-right: 2px;
    margin-right: 3px;
}

[dir="rtl"] .test9 {
    margin-right: 1px;
    margin-left: 3px;
}

/* Overriden should behave correctly with safeBothPrefix */
.test10 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}"
`;

exports[`[[Mode: override]] Overriding Tests:  With safeBothPrefix 1`] = `
"/* Mirror properties, do nothing */
[dir] .test1 {
    padding-left: 10px;
    padding-right: 10px;
}

/* Mirror properties, do nothing */
.test2 {
    margin-left: 5px;
    margin-right: 5px;
    margin-left: 10px;
    margin-right: 10px;
}

[dir] .test2 {
    margin-left: 0;
    margin-right: 0;
}

/* Flipped-declarations overriden by non-flipped declarations, do nothing */
.test3 {
    text-align: left;
    text-align: right;
}

[dir] .test3 {
    text-align: center;
}

/* Overriden mirror properties */
.test4 {
    left: 0;
    right: 10px;
}

[dir] .test4 {
    left: 10px;
    right: 0;
}

[dir="rtl"] .test4 {
    right: 10px;
    left: 0;
}

/* Overriden with non-flippable declarations should move only the last one */
.test5 {
    padding: 0 2px 0 4px;
    padding: 0 4px 0 8px;
}

[dir] .test5 {
    padding: 0 8px 0 16px;
}

[dir="rtl"] .test5 {
    padding: 0 16px 0 8px;
}

/* Overriden with flippable declarations should move all of them */
[dir] .test6 {
    margin-right: 1px;
    margin-right: 2px;
    margin-right: 3px;
}

[dir="rtl"] .test6 {
    margin-right: 0;
    margin-left: 1px;
    margin-left: 2px;
    margin-left: 3px;
}

/* Overriden with flippable declarations but a counterpart flipped declaration should move only the last one */
.test7 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir] .test7 {
    margin-left: 4px;
    margin-right: 3px;
}

[dir="rtl"] .test7 {
    margin-right: 4px;
    margin-left: 3px;
}

.test8 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir] .test8 {
    margin-left: 4px;
    margin-right: 3px;
}

[dir="rtl"] .test8 {
    margin-right: 4px;
    margin-left: 3px;
}

/* Overriden with flippable declarations but a counterpart flipped declaration should move only the last one even if there is a mirror */
.test9 {
    margin-right: 1px;
    margin-right: 2px;
}

[dir] .test9 {
    margin-left: 1px;
    margin-right: 3px;
}

[dir="rtl"] .test9 {
    margin-right: 1px;
    margin-left: 3px;
}

/* Overriden should behave correctly with safeBothPrefix */
.test10 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}

[dir] .test10 {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}"
`;
